Added LBaaS Outputs template

--- a/OpenStackDay2017IaaS.yml
+++ b/OpenStackDay2017IaaS.yml
@@ -376,3 +376,11 @@ resources:
             message: "Installation of Phaser Quest Application Tier Complete"
 
 ########################################################################################################### 
+outputs:
+  lbaas-name:
+    description: "LBaaS Name"
+    value: { get_attr: [Phaser_LBaaS, LoadBalancerName]}
+
+  lbaas-dns-url:
+    description: "LBaaS URL"
+    value: { get_attr: [Phaser_LBaaS, DNSName]}
