--- a/OpenStackDay2017IaaS.yml
+++ b/OpenStackDay2017IaaS.yml
@@ -40,7 +40,7 @@ parameters:
     type: string
     label: External management IP CIDR
     description: IP address allowed for access to jump server on SSH
-    default: "165.120.203.180/32" # <--work home--> 165.120.203.180/32"
+    default: "31.53.253.24/32" # 31.53.253.24/32<--work home--> 165.120.203.180/32"
   ubuntu_image:
     type: string
     label: Image name or ID
@@ -84,11 +84,11 @@ resources:
       availability_zone: { get_param: az }
       name: "phaser_subnet"
       network_id: { get_resource: phaser_net }
-      cidr: "192.168.2.0/24"
-      gateway_ip: "192.168.2.254"
+      cidr: "192.168.21.0/24"
+      gateway_ip: "192.168.21.254"
       allocation_pools:
-        - start: "192.168.2.100"
-          end: "192.168.2.150"
+        - start: "192.168.21.100"
+          end: "192.168.21.150"
       dns_nameservers: { get_param: az_dns }
   
   # Connect an interface on the web tier network's subnet to the router
